apps/applications/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-primary
  namespace: pihole
  labels:
    app: pihole-primary
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.50.81"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  selector:
    app: pihole-primary
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-secondary
  namespace: pihole
  labels:
    app: pihole-secondary
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.50.82"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  selector:
    app: pihole-secondary
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-primary-metrics
  namespace: pihole
  labels:
    app: pihole-primary
spec:
  selector:
    app: pihole-primary
  ports:
    - name: metrics
      port: 9617
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-secondary-metrics
  namespace: pihole
  labels:
    app: pihole-secondary
spec:
  selector:
    app: pihole-secondary
  ports:
    - name: metrics
      port: 9617
      targetPort: metrics
