apps/applications/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: pihole.local  # Change to your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
